# tealeafQR

./: .gitignore  teaLeafQR.cabal
c/: build.sh  main.c  tealeafQR.c  tealeafQR.h
src/: Main.hs
